import("//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags/buildflags.gni")
import("//build/config/features.gni")

source_set("renderer") {
  visibility = [
    "//adrbrowsiel:child_dependencies",
    "//adrbrowsiel/renderer/*",
    "//adrbrowsiel/test:*",
    "//chrome/renderer/*",
  ]

  public_deps = [ "//chrome/renderer" ]

  deps = [
    "//adrbrowsiel/components/adrbrowsiel_search/renderer",
    "//adrbrowsiel/components/adrbrowsiel_shields/common",
    "//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags",
    "//adrbrowsiel/components/cosmetic_filters/renderer",
    "//v8",
  ]

  if (adrbrowsiel_wallet_enabled) {
    deps += [
      "//adrbrowsiel/components/adrbrowsiel_wallet/renderer",
      "//adrbrowsiel/renderer/adrbrowsiel_wallet/",
    ]
  }
}
